--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,10 +11,19 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
     "@repo/ui": "workspace:*",
+    "@tailwindcss/postcss": "^4.1.14",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.546.0",
     "next": "^15.5.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.14",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -22,6 +31,7 @@
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
+    "@types/three": "^0.180.0",
     "eslint": "^9.34.0",
     "typescript": "5.9.2"
   }
