--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "packageManager": "pnpm@9.0.0",
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "@heroicons/react": "^2.2.0"
   }
 }
